# vs-serveur

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  config.xml  configure
api/: Makefile
configs/: mod-basique.xml
include/core/: PacketHandler.hh  fwd.hh
include/core/adminServer/: AdminServer.hh
include/core/client/: Client.hh  Client.hxx
include/core/config/: Config.hh
include/core/diffusion/: Diffusion.hh  HandlingSender.hh
include/core/event/: authEvent.hh  event.hh  eventManager.hh
include/core/fileManager/: Chuck.hh  FileVideo.hh  FileVideo.hxx  LiveFile.hh  LiveHandler.hh  VodFile.hh  VodFile.hxx
include/core/module/: baseModule.hh  module.hh  moduleManager.hh
include/core/network/: ClientList.hh  Dispatcher.hh  Network.hh  Network.hxx  Packet.hh  Packet.hxx
include/core/sqlManager/: SqlManager.hh
include/core/thread/: ThreadPool.hh  ThreadPool.hxx  WorkList.hh  WorkList.hxx
include/core/tools/chunkCounter/: ChunckCounter.hh
include/core/tools/http/: Http.hh
include/core/tracker/: Tracker.hh
scripts/: autoload.sh  deploy.sh  loader.sh
sql/functions/: set_handlings.sql
src/: Makefile  PacketHandler.cc  PacketHandler.hh  fwd.hh  main.cc
src/AdminServer/: AdminServer.cc  AdminServer.hh
src/Client/: Client.cc  Client.hh  Client.hxx  LiveClient.cc  LiveClient.hh  LiveClient.hxx  TypeClient.cc  TypeClient.hh  TypeClient.hxx  VodClient.cc  VodClient.hh  VodClient.hxx
src/Config/: Config.cc  Config.hh
src/Diffusion/: Diffusion.cc  Diffusion.d  Diffusion.hh  HandlingSender.cc  HandlingSender.hh
src/Event/: authEvent.cc  event.cc  eventManager.cc
src/FileManager/: Chuck.cc  Chuck.hh  FileVideo.cc  FileVideo.hh  FileVideo.hxx  LiveFile.cc  LiveFile.hh  LiveHandler.cc  LiveHandler.hh  VodFile.cc  VodFile.hh  VodFile.hxx  VodHandler.cc  VodHandler.hh
src/Log/: Log.cc  Log.hh
src/Module/: module.cc  module.hh  moduleManager.cc
src/Network/: ClientBiding.cc  ClientBiding.hh  ClientList.cc  ClientList.hh  Dispatcher.cc  Network.cc  Network.hh  NetworkListener.cc  NetworkListener.hh  Packet.cc
src/SqlManager/: SqlManager.cc  SqlManager.hh
src/Thread/: Thread.cc  Thread.hh  ThreadPool.cc  ThreadPool.hh  ThreadPool.hxx  WorkList.cc  WorkList.hh  WorkList.hxx
src/Tools/: Files.cc  Token.cc  Tools.hh  string.cc  string.hxx
src/Tools/ChunkCounter/: ChunckCounter.cc  ChunckCounter.hh
src/Tools/Http/: Http.cc  Http.hh
src/Tracker/: Tracker.cc  Tracker.hh
